--- a/shop.html
+++ b/shop.html
@@ -246,7 +246,7 @@
       <h2>Wallets</h2>
       <div class="grid">
         <article class="card" data-item="Wallet — Bi-fold">
-          <img src="images/Trifold-min.jpeg" width="1000" height="667" loading="lazy" decoding="async"
+          <img src="images/Wallet.jpeg" width="1000" height="667" loading="lazy" decoding="async"
                alt="Handmade leather wallet — WV-built with burnished edges and clean stitch.">
           <div class="pad">
             <div class="title-row">
@@ -312,7 +312,7 @@
         </article>
 
         <article class="card" data-item="Wallet — Tri-fold">
-          <img src="images/Purse3-min.jpeg" width="1000" height="667" loading="lazy" decoding="async"
+          <img src="Wallet.jpeg" width="1000" height="667" loading="lazy" decoding="async"
                alt="Tri-fold style leather wallet — crafted in the Mid-Atlantic with durable finish.">
           <div class="pad">
             <div class="title-row">
