--- a/shop.html
+++ b/shop.html
@@ -312,7 +312,7 @@
         </article>
 
         <article class="card" data-item="Wallet — Tri-fold">
-          <img src="Wallet.jpeg" width="1000" height="667" loading="lazy" decoding="async"
+          <img src="images/Wallet.jpeg" width="1000" height="667" loading="lazy" decoding="async"
                alt="Tri-fold style leather wallet — crafted in the Mid-Atlantic with durable finish.">
           <div class="pad">
             <div class="title-row">
