--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 
   <section class="hero">
     <div class="wrap">
-      <h1>No machines. Made by hand.</h1>
-      <p>Hand-cut, hand-stitched leather goods from Bridgeport, WV — wallets, purses, and custom holsters. Every piece built to order by Walter Lewis III.</p>
+     <h1>No Machines. No Shortcuts. One-of-a-Kind, Every Time.</h1>
+     <p><strong>EVERY PIECE DESIGNED BY YOU —</strong> shaped, stitched, stamped, stained, and sealed by me.<br>
+      A craftsman’s promise — <em>Walter</em>.</p>
       <div class="cta">
         <a class="pill" href="shop.html">Shop Now</a>
         <a class="pill secondary" href="custom.html">Request Something Custom</a>
