--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <img src="images/Logo-min.jpg" alt="3Leathers logo">
         <strong>3Leathers</strong>
       </div>
+      <span class="contact-info">(304) 669-1412 • Bridgeport, WV</span>
       <nav>
         <a href="index.html"><strong>Home</strong></a> •
         <a href="shop.html">Shop</a> •
