--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@
     .donate-btn{background-color:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700}
     .donate-btn.ca{background-color:#3ddc84}
     .fine{color:#cfc8a8;text-align:center;padding:14px 16px}
+    .contact-info {
+  margin-left: auto;
+  font-size: 0.9rem;
+  color: var(--ink);
+  white-space: nowrap;
+}
+
+@media (max-width: 700px) {
+  .contact-info {
+    display: block;
+    margin-left: 0;
+    margin-top: 4px;
+    text-align: right;
+  }
+}
   </style>
 </head>
 <body>
