--- a/custom.html
+++ b/custom.html
@@ -117,13 +117,13 @@
     I agree that custom work may require a deposit and build time.
   </label>
 
-  <!-- Hidden metadata (optional but helpful) -->
-  <input type="hidden" name="_subject" value="New Custom Request — 3Leathers" />
-  <!-- Redirect after success (optional): create /custom-thanks.html if you want -->
-  <!-- <input type="hidden" name="_redirect" value="https://3leathers.com/custom-thanks.html" /> -->
-  <input type="hidden" id="page_url" name="page_url" value="" />
-  <!-- Simple honeypot to reduce spam -->
-  <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" style="position:absolute;left:-9999px;opacity:0;height:0;width:0;" />
+ <!-- Hidden metadata (optional but helpful) -->
+<input type="hidden" name="_subject" value="New Custom Request — 3Leathers" />
+<input type="hidden" name="_redirect" value="https://3leathers.com/custom-thanks.html" />
+<input type="hidden" id="page_url" name="page_url" value="" />
+<!-- Simple honeypot to reduce spam -->
+<input type="text" name="_gotcha" tabindex="-1" autocomplete="off"
+       style="position:absolute;left:-9999px;opacity:0;height:0;width:0;" />
 
   <!-- Controls -->
   <button type="submit">Send Request</button>
