--- a/custom.html
+++ b/custom.html
@@ -220,10 +220,17 @@
       try{
         const resp = await fetch(form.action, { method:'POST', body: formData, headers: { 'Accept': 'application/json' }});
         if (resp.ok) {
-          status.textContent = 'Thanks! Your custom request was received.';
-          status.classList.add('ok');
-          form.reset(); threadEl.innerHTML = ''; convoEl.value = '';
-        } else {
+  // optional: quick visual confirmation before redirect
+  status.textContent = 'Thanks! Redirecting…';
+  status.classList.add('ok');
+
+  // ensure the conversation textarea is up to date
+  // (safe to keep; Formspree already received the payload)
+  // then send the customer to your custom page
+  window.location.href = 'https://3leathers.com/custom-thanks.html';
+  return;
+}
+ else {
           const data = await resp.json().catch(()=>({}));
           const msg = (data && data.errors && data.errors.length) ? data.errors.map(e=>e.message).join(', ') : 'Submission failed.';
           status.textContent = msg + ' Please try again.'; status.classList.add('err');
