--- a/custom.html
+++ b/custom.html
@@ -36,11 +36,6 @@
     .pill{padding:10px 14px;border-radius:999px;background:var(--accent);color:#000;font-weight:700;text-decoration:none;border:none;cursor:pointer}
     .pill.secondary{background:#2a2a2a;color:var(--ink);border:1px solid var(--muted)}
     .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    ul#thread{list-style:none;margin:10px 0 0 0;padding:0}
-    ul#thread li{background:#121212;border:1px solid var(--muted);padding:10px;border-radius:10px;margin:8px 0}
-    .msg{border-left:3px solid var(--accent);padding-left:10px}
-    .req{display:flex;gap:8px;align-items:center;margin-top:10px}
-    .req input[type=checkbox]{transform:scale(1.2)}
     .status{margin-top:14px;font-weight:700}
     .ok{color:var(--ok)} .err{color:var(--err)}
     footer{padding:24px 16px;border-top:1px solid var(--muted);text-align:center;color:#cfc8a8}
@@ -71,83 +66,83 @@
   </section>
 
   <main class="wrap">
-    <!-- 3Leathers — Custom Request Form (Formspree v2) -->
-<form id="custom-request"
-      action="https://formspree.io/f/xvgvjnbe" method="POST"
-      accept-charset="UTF-8"
-      autocomplete="on"
-      novalidate>
+    <!-- 3Leathers — Custom Request Form -->
+    <form id="custom-request"
+          action="https://formspree.io/f/xvgvjnbe"
+          method="POST"
+          accept-charset="UTF-8"
+          autocomplete="on"
+          novalidate>
 
-  <!-- Customer Details -->
-  <label for="name">Name *</label>
-  <input id="name" name="name" type="text" required aria-required="true" placeholder="Your full name" />
+      <div class="grid">
+        <div>
+          <label for="name">Name *</label>
+          <input id="name" name="name" type="text" required aria-required="true" placeholder="Your full name" />
+        </div>
 
-  <label for="email">Email *</label>
-  <input id="email" name="email" type="email" required aria-required="true" placeholder="you@example.com" />
+        <div>
+          <label for="email">Email *</label>
+          <input id="email" name="email" type="email" required aria-required="true" placeholder="you@example.com" />
+        </div>
 
-  <label for="phone">Phone (optional)</label>
-  <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="(304) 555-0199" />
+        <div>
+          <label for="phone">Phone (optional)</label>
+          <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="(304) 555-0199" />
+        </div>
 
-  <!-- Project -->
-  <label for="item_type">Item Type *</label>
-  <select id="item_type" name="item_type" required aria-required="true">
-    <option value="" disabled selected>Select one…</option>
-    <option>Wallet</option>
-    <option>Purse</option>
-    <option>Holster</option>
-    <option>Other</option>
-  </select>
+        <div>
+          <label for="item_type">Item Type *</label>
+          <select id="item_type" name="item_type" required aria-required="true">
+            <option value="" disabled selected>Select one…</option>
+            <option>Wallet</option>
+            <option>Purse</option>
+            <option>Holster</option>
+            <option>Other</option>
+          </select>
+        </div>
 
-  <label for="color_finish">Leather Color / Finish</label>
-  <input id="color_finish" name="color_finish" type="text" placeholder="e.g., Oxblood, matte" />
+        <div class="grid-1">
+          <label for="color_finish">Leather Color / Finish</label>
+          <input id="color_finish" name="color_finish" type="text" placeholder="e.g., Oxblood, matte" />
+        </div>
 
-  <label for="sizing_notes">Sizing / Fit Notes</label>
-  <input id="sizing_notes" name="sizing_notes" type="text" placeholder="Measurements or fit details" />
+        <div class="grid-1">
+          <label for="sizing_notes">Sizing / Fit Notes</label>
+          <input id="sizing_notes" name="sizing_notes" type="text" placeholder="Measurements or fit details" />
+        </div>
 
-  <label for="ref_link">Reference Image Link (optional)</label>
-  <input id="ref_link" name="ref_link" type="url" inputmode="url" placeholder="https://..." />
-  <small>Tip: Paste any link to a photo — I’ll open it when reviewing your request.</small>
+        <div class="grid-1">
+          <label for="ref_link">Reference Image Link (optional)</label>
+          <input id="ref_link" name="ref_link" type="url" inputmode="url" placeholder="https://..." />
+          <div class="hint">Tip: Paste any link to a photo — I’ll open it when reviewing your request.</div>
+        </div>
 
-  <label for="notes">Conversation / Notes</label>
-  <textarea id="notes" name="notes" rows="6" placeholder="Tell me what you have in mind…"></textarea>
+        <div class="grid-1">
+          <label for="notes">Conversation / Notes</label>
+          <textarea id="notes" name="notes" rows="6" placeholder="Tell me what you have in mind…"></textarea>
+        </div>
 
-  <!-- Acknowledgment -->
-  <label class="agree">
-    <input id="ack_deposit" name="ack_deposit" type="checkbox" required aria-required="true" />
-    I agree that custom work may require a deposit and build time.
-  </label>
+        <div class="grid-1">
+          <label class="req">
+            <input id="ack_deposit" name="ack_deposit" type="checkbox" required aria-required="true" />
+            I agree that custom work may require a deposit and build time.
+          </label>
+        </div>
+      </div>
 
- <!-- Hidden metadata (optional but helpful) -->
-<input type="hidden" name="_subject" value="New Custom Request — 3Leathers" />
-<input type="hidden" name="_redirect" value="https://3leathers.com/custom-thanks.html" />
-<input type="hidden" id="page_url" name="page_url" value="" />
-<!-- Simple honeypot to reduce spam -->
-<input type="text" name="_gotcha" tabindex="-1" autocomplete="off"
-       style="position:absolute;left:-9999px;opacity:0;height:0;width:0;" />
+      <!-- Hidden helpers -->
+      <input type="hidden" name="_subject" value="New Custom Request — 3Leathers" />
+      <input type="hidden" name="_redirect" value="https://3leathers.com/custom-thanks.html" />
+      <input type="hidden" id="page_url" name="page_url" value="" />
+      <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" style="position:absolute;left:-9999px;opacity:0;height:0;width:0;" />
 
-  <!-- Controls -->
-  <button type="submit">Send Request</button>
-  <button type="reset">Reset</button>
-</form>
+      <div class="actions">
+        <button class="pill" type="submit">Send Request</button>
+        <button class="pill secondary" type="reset">Reset</button>
+      </div>
 
-<script>
-  // Attach page URL for context in your Formspree dashboard/email
-  (function () {
-    var urlField = document.getElementById('page_url');
-    if (urlField) urlField.value = window.location.href;
-    // Prevent accidental double-submits
-    var form = document.getElementById('custom-request');
-    if (!form) return;
-    form.addEventListener('submit', function (e) {
-      var btn = form.querySelector('button[type="submit"]');
-      if (btn) {
-        btn.disabled = true;
-        btn.textContent = 'Sending…';
-      }
-    });
-  })();
-</script>
-
+      <div id="status" class="status" aria-live="polite"></div>
+    </form>
   </main>
 
   <footer>
@@ -156,116 +151,55 @@
     </div>
   </footer>
 
- <script>
-  // Safe year stamp (only if the element exists)
-  (function () {
-    const yrEl = document.getElementById('yr');
-    if (yrEl) yrEl.textContent = new Date().getFullYear();
-  })();
+  <!-- Single unified script (remove any other scripts) -->
+  <script>
+    (function () {
+      // Footer year
+      var yr = document.getElementById('yr');
+      if (yr) yr.textContent = new Date().getFullYear();
 
-  // Grab the correct form (matches your <form id="custom-request">)
-  const form = document.getElementById('custom-request');
-  if (!form) {
-    console.warn('custom-request form not found');
-  }
+      // Form + status
+      var form = document.getElementById('custom-request');
+      var statusEl = document.getElementById('status');
+      if (!form) return;
 
-  // Optional status line (only used if you add <div id="status"></div> somewhere)
-  const status = document.getElementById('status');
+      // Keep hidden page URL in sync
+      var pageUrlField = form.querySelector('[name="page_url"]');
+      if (pageUrlField) pageUrlField.value = location.href;
 
-  // Conversation helpers (only used if these elements exist)
-  const threadEl = document.getElementById('thread');
-  const inputEl  = document.getElementById('commentInput');
-  const convoEl  = document.getElementById('conversation');
-  const addBtn   = document.getElementById('addMsg');
-  const clearBtn = document.getElementById('clearMsg');
+      // Force redirect on success (works on Free plans)
+      form.addEventListener('submit', function (e) {
+        e.preventDefault();
 
-  // Keep page URL in the hidden field you already have: name="page_url"
-  const pageUrlField = form ? form.querySelector('[name="page_url"]') : null;
-  if (pageUrlField) pageUrlField.value = location.href;
+        // Button UX
+        var btn = form.querySelector('button[type="submit"]');
+        if (btn) { btn.disabled = true; btn.textContent = 'Sending…'; }
+        if (statusEl) { statusEl.textContent = 'Sending…'; statusEl.className = 'status'; }
 
-  // Build conversation textarea safely (only if the elements exist)
-  function rebuildConversation(){
-    if (!threadEl || !convoEl) return;
-    const lines = Array.from(threadEl.querySelectorAll('li .msg')).map(x => x.textContent.trim());
-    convoEl.value = lines.map((t,i)=>`[${String(i+1).padStart(2,'0')}] ${t}`).join('\n');
-  }
-
-  if (addBtn && inputEl && threadEl) {
-    addBtn.addEventListener('click', ()=>{
-      const txt = (inputEl.value || '').trim();
-      if (!txt) return;
-      const li = document.createElement('li');
-      li.innerHTML = `<div class="msg">${txt}</div>`;
-      threadEl.appendChild(li);
-      inputEl.value = '';
-      rebuildConversation();
-      inputEl.focus();
-    });
-  }
-
-  if (clearBtn && threadEl) {
-    clearBtn.addEventListener('click', ()=>{
-      threadEl.innerHTML = '';
-      rebuildConversation();
-      if (inputEl) inputEl.focus();
-    });
-  }
-
-  // Prefill from query (safe: only touches fields that exist)
-  (function prefillFromQuery(){
-    const p = new URLSearchParams(location.search);
-    const map = {
-      name: '#name',
-      email: '#email',
-      phone: '#phone',
-      product: '#product',
-      leather: '#leather',
-      sizing: '#sizing',
-      referenceUrl: '#referenceUrl'
-    };
-    Object.entries(map).forEach(([key, sel])=>{
-      if (!p.has(key)) return;
-      const el = document.querySelector(sel);
-      if (el) el.value = p.get(key);
-    });
-  })();
-
-  // Single AJAX submit with forced redirect to your custom-thanks page
-  if (form) {
-    form.addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      if (status) { status.textContent = 'Sending…'; status.className = 'status'; }
-      rebuildConversation();
-
-      try {
-        const resp = await fetch(form.action, {
+        fetch(form.action, {
           method: 'POST',
           body: new FormData(form),
           headers: { 'Accept': 'application/json' }
-        });
-
-        if (resp.ok) {
-          if (status) { status.textContent = 'Thanks! Redirecting…'; status.classList.add('ok'); }
-          window.location.href = 'https://3leathers.com/custom-thanks.html';
-          return;
-        }
-
-        // Non-200: read Formspree error if present
-        let msg = 'Submission failed.';
-        try {
-          const data = await resp.json();
-          if (data && data.errors && data.errors.length) {
-            msg = data.errors.map(e=>e.message).join(', ');
+        }).then(function (resp) {
+          if (resp.ok) {
+            if (statusEl) { statusEl.textContent = 'Thanks! Redirecting…'; statusEl.classList.add('ok'); }
+            window.location.href = 'https://3leathers.com/custom-thanks.html';
+            return;
           }
-        } catch (_) {}
-        if (status) { status.textContent = msg + ' Please try again.'; status.classList.add('err'); }
-
-      } catch (err) {
-        if (status) { status.textContent = 'Network error — please try again in a moment.'; status.classList.add('err'); }
-      }
-    }, false);
-  }
-</script>
-
+          return resp.json().then(function (data) {
+            var msg = 'Submission failed.';
+            if (data && data.errors && data.errors.length) {
+              msg = data.errors.map(function (e) { return e.message; }).join(', ');
+            }
+            if (statusEl) { statusEl.textContent = msg + ' Please try again.'; statusEl.classList.add('err'); }
+            if (btn) { btn.disabled = false; btn.textContent = 'Send Request'; }
+          });
+        }).catch(function () {
+          if (statusEl) { statusEl.textContent = 'Network error — please try again in a moment.'; statusEl.classList.add('err'); }
+          if (btn) { btn.disabled = false; btn.textContent = 'Send Request'; }
+        });
+      }, false);
+    })();
+  </script>
 </body>
 </html>
