--- a/custom-thanks.html
+++ b/custom-thanks.html
@@ -1,92 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8">
   <title>Thanks — 3Leathers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex">
   <style>
     :root{
-      --ink: #f4e4a1;   /* pastel yellow you asked for */
-      --shadow: rgba(0,0,0,0.55);
-      --shadow-soft: rgba(0,0,0,0.35);
+      --ink:#f4e4a1; /* pastel yellow */
+      --ink-dim:#cabf93;
+      --shadow:rgba(0,0,0,.55);
+      --paper:#1a160d;
     }
-    html, body {
-      height: 100%;
-      margin: 0;
+    html,body{height:100%;margin:0}
+    body{
+      color:var(--ink);
+      font-family:ui-serif, Georgia, "Times New Roman", serif;
+      background:#0d0c0a url("images/background2-workshop.jpg") center/cover no-repeat fixed;
     }
-    body {
-      /* Your chosen workshop image */
-      background: url("images/background2-workshop.jpg") center center / cover fixed no-repeat;
-      color: var(--ink);
-      display: grid;
-      place-items: center;
-      text-rendering: optimizeLegibility;
+    .veil{
+      position:fixed;inset:0;background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55));
     }
-    .scrim {
-      /* subtle vignette to ensure text stays readable on busy photos */
-      position: fixed;
-      inset: 0;
-      box-shadow: inset 0 0 220px 80px var(--shadow);
-      pointer-events: none;
+    .center{
+      position:relative;min-height:100%;display:grid;place-items:center;padding:24px;
     }
-    .card {
-      max-width: 780px;
-      padding: clamp(1.25rem, 2.5vw, 2rem);
-      margin: 6vh 4vw;
-      backdrop-filter: blur(2px);
-      background: linear-gradient( to bottom right, rgba(0,0,0,0.55), rgba(0,0,0,0.35) );
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 16px;
-      box-shadow: 0 12px 30px var(--shadow-soft);
+    .card{
+      max-width:820px;
+      background:color-mix(in srgb, var(--paper) 80%, transparent);
+      backdrop-filter:saturate(0.9) blur(2px);
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:18px;
+      box-shadow:0 30px 80px var(--shadow), inset 0 1px 0 rgba(255,255,255,.04);
+      padding:28px 22px;
     }
-    h1 {
-      margin: 0 0 .6rem 0;
-      line-height: 1.25;
-      font-family: Georgia, "Times New Roman", serif;
-      font-size: clamp(1.4rem, 3.4vw, 2rem);
-      font-weight: 700;
+    h1{margin:0 0 10px;font-size:1.9rem;letter-spacing:.2px}
+    p{margin:.4rem 0 0;font-size:1.1rem;line-height:1.5}
+    .sig{margin-top:14px;font-style:italic;color:var(--ink-dim)}
+    .actions{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{
+      appearance:none;text-decoration:none;color:#0e0d0a;background:var(--ink);
+      border-radius:999px;padding:10px 16px;font-weight:700;border:none;display:inline-block;
     }
-    p {
-      margin: .35rem 0;
-      font-family: Georgia, "Times New Roman", serif;
-      font-size: clamp(1rem, 2.4vw, 1.125rem);
-      line-height: 1.6;
-    }
-    .sig {
-      margin-top: 1rem;
-      opacity: 0.95;
-      font-style: italic;
-    }
-    .row {
-      margin-top: 1.25rem;
-    }
-    a.btn {
-      display: inline-block;
-      margin-top: .75rem;
-      padding: .7rem 1rem;
-      border-radius: 10px;
-      text-decoration: none;
-      color: #111;
-      background: var(--ink);
-      box-shadow: 0 6px 16px var(--shadow);
-      font-weight: 600;
-    }
-    a.btn:active { transform: translateY(1px); }
+    .btn.ghost{background:transparent;color:var(--ink);border:1px solid rgba(255,255,255,.3)}
+    footer{position:fixed;left:0;right:0;bottom:0;padding:10px 14px;color:var(--ink-dim);font-size:.9rem}
   </style>
 </head>
 <body>
-  <div class="scrim" aria-hidden="true"></div>
-  <main class="card" role="main">
-    <h1>Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
+  <div class="veil"></div>
+  <main class="center" role="main" aria-labelledby="thanks-title">
+    <section class="card">
+      <h1 id="thanks-title">Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
+      <p>I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
+      <p>If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.</p>
+      <p class="sig">— Walter @ 3Leathers</p>
 
-    <p>I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
-    <p>If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.</p>
-
-    <p class="sig">— Walter @ 3Leathers</p>
-
-    <div class="row">
-      <a class="btn" href="https://3leathers.com">Back to the Workshop →</a>
-    </div>
+      <div class="actions">
+        <a class="btn" href="/" rel="home">Back to Home</a>
+        <a class="btn ghost" href="/custom.html">Send another request</a>
+      </div>
+    </section>
   </main>
+  <footer>&copy; <span id="yr">2025</span> 3Leathers</footer>
+  <script>
+    (function(){
+      var yr = document.getElementById('yr'); if (yr) yr.textContent = new Date().getFullYear();
+    })();
+  </script>
 </body>
 </html>
